# sound

./: CMakeLists.txt  build.bat
include/: BrazzSound.hpp  BrazzSoundController.hpp  BrazzSoundData.hpp  BrazzSoundFactory.hpp  BrazzSoundManager.hpp  EffectsManager.hpp  Envelope.hpp  Instrument.hpp  Note.hpp  WaveOutInterface.hpp  synth.hpp
source/: BrazzSound.cpp  BrazzSoundData.cpp  BrazzSoundFactory.cpp  BrazzSoundManager.cpp  EffectsManager.cpp  Envelope.cpp  Instrument.cpp  Note.cpp  WaveOutInterface.cpp  synth.cpp
test/: test.cpp
